# WebScrappingTemplate

./: README.md
books_scraper/: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
books_scraper/extras/: api_discovery.py
books_scraper/src/scraper/: __init__.py  __main__.py  analyze.py  cli.py  fetch.py  models.py  parse.py  storage.py
books_scraper/tests/: test_parse.py
