[project]
name = "books-scraper"
version = "1.0.0"
description = "Scraper profesional de books.toscrape.com con DuckDB y rich"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "pydantic>=2.7",
    "tenacity>=8.3",
    "duckdb>=1.0",
    "rich>=13.7",
    "typer>=0.12",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.pyright]
venvPath = "."
venv = ".venv"
extraPaths = ["src"]
